- remove hard-coded STRIP variable.
- use LIBS for link libraries.
- unbundle NOTSTRIP from DEBUG so they dont depend on each other.
- fix compilation of lookup_ldap.c without sasl.
- fix dumpmaps multi output.
- try and cleanup after dumpmaps.
- teach dumpmaps to output simple key value pairs.
- fix syncronize handle_mounts() shutdown.

25/07/2012 autofs-5.0.7
=======================
- fix ipv6 name for lookup fix.
- improve mount location error reporting.
- fix paged query more results check.
- fix dumpmaps not reading maps.
- fix result null check in read_one_map().
- fix LDAP result leaks on error paths.
- fix fix LDAP result leaks on error paths.
- code analysis fixes part 1.
- fix not bind mounting local filesystem.
- add "dir" map-type.
- fix wait for master source mutex.
- fix submount shutdown race.
- fix fix map source check in file lookup.
- add disable move mount configure option.
- fix ipv6 name lookup check.
- fix ipv6 rpc calls.
- fix ipv6 configure check.
- add piddir to configure.
- add systemd unit support.
- remove empty command line arguments (passed by systemd).
- fix rpc build error.
- fix improve mount location error reporting.
- fix fix wait for master source mutex.
- add sss lookup module.
- teach automount about sss source.
- fix init script usage message.
- ignore duplicate exports in auto.net.
- add kernel verion check function.
- add function to check mount.nfs version.
- reinstate singleton mount probe.
- rework error return handling in rpc code.
- catch EHOSTUNREACH and bail out early.
- systemd support fixes.
- check scandir() return value.
- allow for kernel packet size change (in kernel 3.3.0+).
- fix function to check mount.nfs version.
- fix typo in libtirpc file name.
- fix rework error return handling in rpc code.
- allow MOUNT_WAIT to override probe.
- improve UDP RPC timeout handling.
- use strtok_r() in linux_version_code().
- fix sss wildcard match.
- fix dlopen() error handling in sss module.